--- a/index.htm
+++ b/index.htm
@@ -10,8 +10,9 @@
     
 <div class="main">
     <h1 class="title">Roll Dice</h1>
-    <p id="dice">⬜</p>
+    <p id="dice">⚅</p>
     <button id="roll-dice-btn">ROLL DICE</button>
+    <ul id="roll-list"></ul>
 </div>
 
 <script src="assets/app.js"></script>
