--- a/index.htm
+++ b/index.htm
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dice Roll</title>
-    <link rel="stylesheet" href="assets/style.css">
-</head>
-<body>
-    
-<div class="main">
-    <h1 class="title">Roll Dice</h1>
-    <p id="dice">⚅</p>
-    <button id="roll-dice-btn">ROLL DICE</button>
-    <ul id="roll-list"></ul>
-</div>
+    <link rel="stylesheet" href="assets/style.css" />
+  </head>
+  <body>
+    <center>
+      <div class="main">
+        <h1 class="title">Roll Dice</h1>
+        <p id="dice">⚅</p>
+        <button id="roll-dice-btn">ROLL DICE</button>
+        <center>
+          <ul id="roll-list"></ul>
+        </center>
+      </div>
+    </center>
 
-<script src="assets/app.js"></script>
-</body>
+    <script src="assets/app.js"></script>
+  </body>
 </html>
